--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -162,7 +162,7 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 2.6vh; font-weight: 600; margin-bottom: 2px"
+                <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
                   >Photo Guy</span
                 >
                 <span style="font-size: 1.5vh">3 hour service</span>
@@ -213,7 +213,7 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 2.6vh; font-weight: 600; margin-bottom: 2px"
+                <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
                   >Video Guy</span
                 >
                 <span style="font-size: 1.5vh">3 hour service</span>
@@ -264,7 +264,7 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 2.6vh; font-weight: 600; margin-bottom: 2px"
+                <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
                   >Drone Guy</span
                 >
                 <span style="font-size: 1.5vh">3 hour service</span>
@@ -306,16 +306,16 @@
         </div>
         <div class="photo-card">
           <div class="l-card">
-            <i
-              class="fa fa-building-o"
-              aria-hidden="true"
-              style="font-size: 36px"
-            ></i>
+            <img
+              src="images/business.png"
+              alt=""
+              style="width: 56px; margin-left: -12px"
+            />
           </div>
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 2.3vh; font-weight: 800; margin-bottom: 2px"
+                <span style="font-size: 2.5vh; font-weight: 800; margin-bottom: 2px"
                   >Corporate Pack</span
                 >
                 <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
