--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -112,28 +112,64 @@
             <!-- Slides -->
             <a
               class="swiper-slide"
-              href="https://clixoapp.com/"
+              href="https://clixoapp.com/portfolio"
             >
               <img
-                src="images/bookOnline.png"
+                src="images/Banner01.png"
                 alt=""
               />
             </a>
             <a
               class="swiper-slide"
-              href="https://clixoapp.com/"
+              href="https://clixoapp.com/become-a-hero"
             >
               <img
-                src="images/doshoot.png"
+                src="images/Banner02.png"
                 alt=""
               />
             </a>
             <a
               class="swiper-slide"
-              href="https://clixoapp.com/"
+              href="tel:+917827978774"
             >
               <img
-                src="images/getdata.png"
+                src="images/Banner03.png"
+                alt=""
+              />
+            </a>
+            <a
+              class="swiper-slide"
+              href="tel:+917827978774"
+            >
+              <img
+                src="images/Banner04.png"
+                alt=""
+              />
+            </a>
+            <a
+              class="swiper-slide"
+              href="tel:+917827978774"
+            >
+              <img
+                src="images/Banner05.png"
+                alt=""
+              />
+            </a>
+            <a
+              class="swiper-slide"
+              href="https://pages.razorpay.com/pl_LNP9sK1c4Awx2B/view"
+            >
+              <img
+                src="images/Banner06.png"
+                alt=""
+              />
+            </a>
+            <a
+              class="swiper-slide"
+              href="tel:+917827978774"
+            >
+              <img
+                src="images/Banner07.png"
                 alt=""
               />
             </a>
