--- a/index.html
+++ b/index.html
@@ -33,5 +33,18 @@
   >
     <span style="font-size: 80px; font-weight: bolder; color: #fff">clixo</span>
     <span style="font-size: 50px; font-weight: 300; color: #fff; margin-top: -20px">App</span>
+    <!-- <video
+      width="320"
+      height="240"
+      autoplay
+      muted
+    >
+      <source
+        src="images/App Preview HQ.mov"
+        type="video/mov"
+      />
+
+      Your browser does not support the video tag.
+    </video> -->
   </body>
 </html>
