--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <style></style>
 
     <meta
       name="viewport"
@@ -18,7 +19,6 @@
     />
 
     <title>Details</title>
-    <style></style>
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -29,7 +29,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <div class="main">
       <div class="header">
-        <span style="font-size: 1.5em; font-weight: 800; color: #ff3a00">Hello!</span>
+        <span style="font-size: 1.8em; font-weight: 800; color: #ff3a00">Hello!</span>
         <p onclick="openNav()">
           <img
             src="images/hamburger.png"
@@ -201,20 +201,18 @@
                 <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
                   >Photo Guy</span
                 >
-                <span style="font-size: 1.5vh">3 hour service</span>
-                <span style="font-size: 1.5vh; font-weight: 600; margin-block: 4px"
-                  >30-50 Photos</span
-                >
-                <!-- <a
+                <span style="font-size: 1.5vh; color: gray">3 hour service</span>
+                <span style="font-size: 1.5vh; color: gray; margin-block: 4px">30-50 Photos</span>
+                <a
                   href="https://clixoapp.com/"
                   style="
-                    margin-top: 4px;
+                    margin-top: 1px;
                     text-decoration: underline;
                     color: goldenrod;
                     font-size: 10px;
                   "
                   >View Details</a
-                > -->
+                >
               </div>
               <div class="rt-r-card">
                 <span style="display: flex; font-size: 2.3vh; gap: 10px">
@@ -252,20 +250,20 @@
                 <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
                   >Video Guy</span
                 >
-                <span style="font-size: 1.5vh">3 hour service</span>
-                <span style="font-size: 1.5vh; font-weight: 600; margin-block: 4px"
+                <span style="font-size: 1.5vh; color: gray">3 hour service</span>
+                <span style="font-size: 1.5vh; color: gray; margin-block: 4px"
                   >15-30 Video Clips</span
                 >
-                <!-- <a
+                <a
                   href="https://clixoapp.com/"
                   style="
-                    margin-top: 4px;
+                    margin-top: 1px;
                     text-decoration: underline;
                     color: goldenrod;
                     font-size: 10px;
                   "
                   >View Details</a
-                > -->
+                >
               </div>
               <div class="rt-r-card">
                 <span style="display: flex; font-size: 2.3vh; gap: 10px">
@@ -303,11 +301,11 @@
                 <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
                   >Drone Guy</span
                 >
-                <span style="font-size: 1.5vh">3 hour service</span>
-                <span style="font-size: 1.5vh; font-weight: 600; margin-block: 4px"
+                <span style="font-size: 1.5vh; color: gray">3 hour service</span>
+                <span style="font-size: 1.5vh; color: gray; margin-block: 4px"
                   >15-30 Aerial Videos</span
                 >
-                <!-- <a
+                <a
                   href="https://clixoapp.com/"
                   style="
                     margin-top: 4px;
@@ -316,7 +314,7 @@
                     font-size: 10px;
                   "
                   >View Details</a
-                > -->
+                >
               </div>
               <div class="rt-r-card">
                 <span style="display: flex; font-size: 2.3vh; gap: 10px">
@@ -354,7 +352,7 @@
                 <span style="font-size: 2.5vh; font-weight: 800; margin-bottom: 2px"
                   >Corporate Pack</span
                 >
-                <span style="font-size: x-small; font-weight: 600; margin-block: 4px"
+                <span style="font-size: 1.5vh; color: gray; margin-block: 4px"
                   >Final video deliver in 25 Days</span
                 >
                 <a
