--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -32,9 +32,9 @@
         <span style="font-size: 1.8em; font-weight: 800; color: #ff3a00">Hello!</span>
         <p onclick="openNav()">
           <img
-            src="images/hamburger.png"
+            src="images/menu.png"
             alt=""
-            style="width: 30px; margin-left: -10px"
+            style="width: 40px; margin-left: -10px"
           />
         </p>
       </div>
@@ -185,7 +185,7 @@
           aria-hidden="true"
           style="transform: rotate(90deg)"
         ></i>
-        20% off on all types of services
+        20% off in all Services
       </div>
       <div class="list">
         <div class="photo-card">
@@ -201,15 +201,15 @@
                 <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
                   >Photo Guy</span
                 >
-                <span style="font-size: 1.5vh; color: gray">3 hour service</span>
-                <span style="font-size: 1.5vh; color: gray; margin-block: 4px">30-50 Photos</span>
+                <span style="font-size: 1.9vh; color: gray">3 hour service</span>
+                <span style="font-size: 1.9vh; color: gray; margin-block: 1px">30-50 Photos</span>
                 <a
                   href="https://clixoapp.com/"
                   style="
                     margin-top: 1px;
                     text-decoration: underline;
-                    color: goldenrod;
-                    font-size: 10px;
+                    color: green;
+                    font-size: 1.4vh;
                   "
                   >View Details</a
                 >
@@ -250,8 +250,8 @@
                 <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
                   >Video Guy</span
                 >
-                <span style="font-size: 1.5vh; color: gray">3 hour service</span>
-                <span style="font-size: 1.5vh; color: gray; margin-block: 4px"
+                <span style="font-size: 1.9vh; color: gray">3 hour service</span>
+                <span style="font-size: 1.9vh; color: gray; margin-block: 1px"
                   >15-30 Video Clips</span
                 >
                 <a
@@ -259,8 +259,8 @@
                   style="
                     margin-top: 1px;
                     text-decoration: underline;
-                    color: goldenrod;
-                    font-size: 10px;
+                    color: green;
+                    font-size: 1.4vh;
                   "
                   >View Details</a
                 >
@@ -301,8 +301,8 @@
                 <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
                   >Drone Guy</span
                 >
-                <span style="font-size: 1.5vh; color: gray">3 hour service</span>
-                <span style="font-size: 1.5vh; color: gray; margin-block: 4px"
+                <span style="font-size: 1.9vh; color: gray">3 hour service</span>
+                <span style="font-size: 1.9vh; color: gray; margin-block: 1px"
                   >15-30 Aerial Videos</span
                 >
                 <a
@@ -310,8 +310,8 @@
                   style="
                     margin-top: 4px;
                     text-decoration: underline;
-                    color: goldenrod;
-                    font-size: 10px;
+                    color: green;
+                    font-size: 1.4vh;
                   "
                   >View Details</a
                 >
@@ -352,12 +352,12 @@
                 <span style="font-size: 2.5vh; font-weight: 800; margin-bottom: 2px"
                   >Corporate Pack</span
                 >
-                <span style="font-size: 1.5vh; color: gray; margin-block: 4px"
+                <span style="font-size: 1.9vh; color: gray; margin-block: 1px; max-width: 70%"
                   >Final video deliver in 25 Days</span
                 >
                 <a
                   href="https://clixoapp.com/"
-                  style="text-decoration: underline; color: goldenrod; font-size: 10px"
+                  style="text-decoration: underline; color: green; font-size: 1.4vh"
                   >View Details</a
                 >
               </div>
