--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -65,14 +65,14 @@
         <!-- Add some content to the overlay -->
         <div class="overlay-content">
           <a
-            href="https://clixoapp.com/"
+            href="https://wa.link/qf731p"
             class="menuColor"
-            >Talk To Expert</a
+            >Talk To An Expert</a
           >
           <a
-            href="https://clixoapp.com/"
+            href="https://clixoapp.com/portfolio"
             class="menuGray"
-            >Our Portfolio</a
+            >Our Work</a
           >
           <a
             href="https://clixoapp.com/"
@@ -85,24 +85,37 @@
             >Rate Us</a
           >
           <a
-            href="https://clixoapp.com/"
+            href="tel:+917827978774"
             class="menuGray"
-            >Help/Support</a
+            >Help / Support</a
           >
           <a
-            href="https://clixoapp.com/"
+            href="https://clixoapp.com/privacy-policy-1"
             class="menuGray"
             >T&C / Privacy</a
           >
           <a
-            href="https://clixoapp.com/"
+            href="https://clixoapp.com/training"
             class="menuGray"
             >Training</a
           >
+
           <a
-            href="https://clixoapp.com/"
+            href="https://clixoapp.com/become-a-hero"
             class="menuHero"
             >Become a Hero</a
+          >
+          <a
+            href="whatsapp://send?text=Hey! I booked a professional from ClixoApp! The fastest way to book Photographer, Videographer and Drone pilot services. Download the app!"
+            class="menuShare"
+            >Share on Whatsapp</a
+          >
+          <a
+            href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fparse.com"
+            target="_blank"
+            rel="noopener"
+            class="menuShareFacebook"
+            >Share on Facebook</a
           >
         </div>
       </div>
@@ -198,13 +211,11 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
-                  >Photo Guy</span
-                >
+                <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px">PhotoGuy</span>
                 <span style="font-size: 1.9vh; color: gray">3 hour service</span>
                 <span style="font-size: 1.9vh; color: gray; margin-block: 1px">30-50 Photos</span>
                 <a
-                  href="https://clixoapp.com/"
+                  onclick="window.location.href='https://pages.razorpay.com/pl_JQfofXoUgkv53b/view'"
                   style="
                     margin-top: 1px;
                     text-decoration: underline;
@@ -222,7 +233,7 @@
                     style="color: green; transform: rotate(90deg)"
                   >
                   </i>
-                  <span style="font-weight: 800"> ₹5999 </span>
+                  <span style="font-weight: 800; font-size: 3.5vh"> ₹5999 </span>
                 </span>
                 <span style="font-size: 12px; text-decoration: line-through">₹ 6999</span>
               </div>
@@ -247,15 +258,13 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
-                  >Video Guy</span
-                >
+                <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px">VideoGuy</span>
                 <span style="font-size: 1.9vh; color: gray">3 hour service</span>
                 <span style="font-size: 1.9vh; color: gray; margin-block: 1px"
                   >15-30 Video Clips</span
                 >
                 <a
-                  href="https://clixoapp.com/"
+                  onclick="window.location.href='https://pages.razorpay.com/pl_JQiBULTKorRiP1/view'"
                   style="
                     margin-top: 1px;
                     text-decoration: underline;
@@ -273,7 +282,7 @@
                     style="color: green; transform: rotate(90deg)"
                   >
                   </i>
-                  <span style="font-weight: 800"> ₹8999 </span>
+                  <span style="font-weight: 800; font-size: 3.5vh"> ₹8999 </span>
                 </span>
                 <span style="font-size: 12px; text-decoration: line-through">₹ 9999</span>
               </div>
@@ -298,15 +307,13 @@
           <div class="r-card">
             <div class="rt-card">
               <div class="rt-l-card">
-                <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px"
-                  >Drone Guy</span
-                >
+                <span style="font-size: 2.9vh; font-weight: 600; margin-bottom: 2px">DroneGuy</span>
                 <span style="font-size: 1.9vh; color: gray">3 hour service</span>
                 <span style="font-size: 1.9vh; color: gray; margin-block: 1px"
                   >15-30 Aerial Videos</span
                 >
                 <a
-                  href="https://clixoapp.com/"
+                  onclick="window.location.href='https://pages.razorpay.com/pl_JQiaVAD9GT2alf/view'"
                   style="
                     margin-top: 4px;
                     text-decoration: underline;
@@ -324,7 +331,7 @@
                     style="color: green; transform: rotate(90deg)"
                   >
                   </i>
-                  <span style="font-weight: 800"> ₹11999 </span>
+                  <span style="font-weight: 800; font-size: 3.5vh"> ₹11999 </span>
                 </span>
                 <span style="font-size: 12px; text-decoration: line-through">₹ 13999</span>
               </div>
@@ -369,7 +376,7 @@
                     style="color: green; transform: rotate(90deg)"
                   >
                   </i>
-                  <span style="font-weight: 800"> ₹74999 </span>
+                  <span style="font-weight: 800; font-size: 3.5vh"> ₹74999 </span>
                 </span>
                 <span style="font-size: 12px; text-decoration: line-through">₹ 95999</span>
               </div>
