--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -77,11 +77,6 @@
           <a
             href="https://clixoapp.com/"
             class="menuGray"
-            >Share</a
-          >
-          <a
-            href="https://clixoapp.com/"
-            class="menuGray"
             >Rate Us</a
           >
           <a
@@ -226,7 +221,7 @@
                 >
               </div>
               <div class="rt-r-card">
-                <span style="display: flex; font-size: 2.3vh; gap: 10px">
+                <span style="display: flex; font-size: 3vh; gap: 15px">
                   <i
                     class="fa fa-tag"
                     aria-hidden="true"
@@ -235,14 +230,14 @@
                   </i>
                   <span style="font-weight: 800; font-size: 3.5vh"> ₹5999 </span>
                 </span>
-                <span style="font-size: 12px; text-decoration: line-through">₹ 6999</span>
+                <span style="font-size: 2.2vh; text-decoration: line-through">₹ 6999</span>
               </div>
             </div>
             <div class="rb-card">
               <button
                 onclick="window.location.href='https://pages.razorpay.com/pl_JQfofXoUgkv53b/view'"
               >
-                Book
+                BOOK
               </button>
             </div>
           </div>
@@ -275,7 +270,7 @@
                 >
               </div>
               <div class="rt-r-card">
-                <span style="display: flex; font-size: 2.3vh; gap: 10px">
+                <span style="display: flex; font-size: 3vh; gap: 15px">
                   <i
                     class="fa fa-tag"
                     aria-hidden="true"
@@ -284,14 +279,14 @@
                   </i>
                   <span style="font-weight: 800; font-size: 3.5vh"> ₹8999 </span>
                 </span>
-                <span style="font-size: 12px; text-decoration: line-through">₹ 9999</span>
+                <span style="font-size: 2.2vh; text-decoration: line-through">₹ 9999</span>
               </div>
             </div>
             <div class="rb-card">
               <button
                 onclick="window.location.href='https://pages.razorpay.com/pl_JQiBULTKorRiP1/view'"
               >
-                Book
+                BOOK
               </button>
             </div>
           </div>
@@ -324,7 +319,7 @@
                 >
               </div>
               <div class="rt-r-card">
-                <span style="display: flex; font-size: 2.3vh; gap: 10px">
+                <span style="display: flex; font-size: 3vh; gap: 15px">
                   <i
                     class="fa fa-tag"
                     aria-hidden="true"
@@ -333,14 +328,14 @@
                   </i>
                   <span style="font-weight: 800; font-size: 3.5vh"> ₹11999 </span>
                 </span>
-                <span style="font-size: 12px; text-decoration: line-through">₹ 13999</span>
+                <span style="font-size: 2.2vh; text-decoration: line-through">₹ 13999</span>
               </div>
             </div>
             <div class="rb-card">
               <button
                 onclick="window.location.href='https://pages.razorpay.com/pl_JQiaVAD9GT2alf/view'"
               >
-                Book
+                BOOK
               </button>
             </div>
           </div>
@@ -369,7 +364,7 @@
                 >
               </div>
               <div class="rt-r-card">
-                <span style="display: flex; font-size: 2.3vh; gap: 10px">
+                <span style="display: flex; font-size: 3vh; gap: 15px">
                   <i
                     class="fa fa-tag"
                     aria-hidden="true"
@@ -378,11 +373,11 @@
                   </i>
                   <span style="font-weight: 800; font-size: 3.5vh"> ₹74999 </span>
                 </span>
-                <span style="font-size: 12px; text-decoration: line-through">₹ 95999</span>
+                <span style="font-size: 2vh; text-decoration: line-through">₹ 95999</span>
               </div>
             </div>
             <div class="rb-card">
-              <button>Book</button>
+              <button>BOOK</button>
             </div>
           </div>
         </div>
