--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -72,10 +72,10 @@
           <a
             href="https://clixoapp.com/portfolio"
             class="menuGray"
-            >Our Work</a
+            >Our Heroes Work</a
           >
           <a
-            href="https://clixoapp.com/"
+            href="https://bitly.ws/YEBq"
             class="menuGray"
             >Rate Us</a
           >
@@ -221,7 +221,14 @@
                 >
               </div>
               <div class="rt-r-card">
-                <span style="display: flex; font-size: 3vh; gap: 15px">
+                <span
+                  style="
+                    display: flex;
+                    font-size: 2.6vh;
+                    width: 95px;
+                    justify-content: space-between;
+                  "
+                >
                   <i
                     class="fa fa-tag"
                     aria-hidden="true"
@@ -270,7 +277,14 @@
                 >
               </div>
               <div class="rt-r-card">
-                <span style="display: flex; font-size: 3vh; gap: 15px">
+                <span
+                  style="
+                    display: flex;
+                    font-size: 2.6vh;
+                    width: 95px;
+                    justify-content: space-between;
+                  "
+                >
                   <i
                     class="fa fa-tag"
                     aria-hidden="true"
@@ -319,7 +333,14 @@
                 >
               </div>
               <div class="rt-r-card">
-                <span style="display: flex; font-size: 3vh; gap: 15px">
+                <span
+                  style="
+                    display: flex;
+                    font-size: 2.6vh;
+                    width: 95px;
+                    justify-content: space-between;
+                  "
+                >
                   <i
                     class="fa fa-tag"
                     aria-hidden="true"
@@ -358,26 +379,37 @@
                   >Final video deliver in 25 Days</span
                 >
                 <a
-                  href="https://clixoapp.com/"
+                  href="https://pages.razorpay.com/pl_LNP9sK1c4Awx2B/view"
                   style="text-decoration: underline; color: green; font-size: 1.4vh"
                   >View Details</a
                 >
               </div>
               <div class="rt-r-card">
-                <span style="display: flex; font-size: 3vh; gap: 15px">
+                <span
+                  style="
+                    display: flex;
+                    font-size: 2.6vh;
+                    width: 95px;
+                    justify-content: space-between;
+                  "
+                >
                   <i
                     class="fa fa-tag"
                     aria-hidden="true"
                     style="color: green; transform: rotate(90deg)"
                   >
                   </i>
-                  <span style="font-weight: 800; font-size: 3.5vh"> ₹74999 </span>
+                  <span style="font-weight: 800; font-size: 3.5vh"> ₹44990 </span>
                 </span>
-                <span style="font-size: 2vh; text-decoration: line-through">₹ 95999</span>
+                <span style="font-size: 2vh; text-decoration: line-through">₹ 74990</span>
               </div>
             </div>
             <div class="rb-card">
-              <button>BOOK</button>
+              <button
+                onclick="window.location.href='https://pages.razorpay.com/pl_LNP9sK1c4Awx2B/view'"
+              >
+                BOOK
+              </button>
             </div>
           </div>
         </div>
