--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     <script type="text/javascript">
       setTimeout(function () {
-        window.location.href = "./clixoDetail.html";
+        window.location.href = "./clixoUser.html";
       }, 2000);
       // setTimeout(function () {
       //   document.body.style.backgroundColor = "#ffffff";
