--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -101,7 +101,9 @@
             >Become a Hero</a
           >
           <a
-            href="whatsapp://send?text=Hey! I booked a professional from ClixoApp! The fastest way to book Photographer, Videographer and Drone pilot services. Download the app!"
+            href="whatsapp://send?text=Hey! I booked a professional from ClixoApp! 
+            The fastest way to book Photographer, Videographer and Drone pilot 
+            services. Download the app! https://bitly.ws/YEBq"
             class="menuShare"
             >Share on Whatsapp</a
           >
@@ -225,7 +227,7 @@
                   style="
                     display: flex;
                     font-size: 2.6vh;
-                    width: 95px;
+                    width: 110px;
                     justify-content: space-between;
                   "
                 >
@@ -235,7 +237,7 @@
                     style="color: green; transform: rotate(90deg)"
                   >
                   </i>
-                  <span style="font-weight: 800; font-size: 3.5vh"> ₹5999 </span>
+                  <span style="font-weight: 800; font-size: 3.2vh"> ₹5999 </span>
                 </span>
                 <span style="font-size: 2.2vh; text-decoration: line-through">₹ 6999</span>
               </div>
@@ -281,7 +283,7 @@
                   style="
                     display: flex;
                     font-size: 2.6vh;
-                    width: 95px;
+                    width: 110px;
                     justify-content: space-between;
                   "
                 >
@@ -291,7 +293,7 @@
                     style="color: green; transform: rotate(90deg)"
                   >
                   </i>
-                  <span style="font-weight: 800; font-size: 3.5vh"> ₹8999 </span>
+                  <span style="font-weight: 800; font-size: 3.2vh"> ₹8999 </span>
                 </span>
                 <span style="font-size: 2.2vh; text-decoration: line-through">₹ 9999</span>
               </div>
@@ -337,7 +339,7 @@
                   style="
                     display: flex;
                     font-size: 2.6vh;
-                    width: 95px;
+                    width: 110px;
                     justify-content: space-between;
                   "
                 >
@@ -347,7 +349,7 @@
                     style="color: green; transform: rotate(90deg)"
                   >
                   </i>
-                  <span style="font-weight: 800; font-size: 3.5vh"> ₹11999 </span>
+                  <span style="font-weight: 800; font-size: 3.2vh"> ₹11999 </span>
                 </span>
                 <span style="font-size: 2.2vh; text-decoration: line-through">₹ 13999</span>
               </div>
@@ -389,7 +391,7 @@
                   style="
                     display: flex;
                     font-size: 2.6vh;
-                    width: 95px;
+                    width: 110px;
                     justify-content: space-between;
                   "
                 >
@@ -399,7 +401,7 @@
                     style="color: green; transform: rotate(90deg)"
                   >
                   </i>
-                  <span style="font-weight: 800; font-size: 3.5vh"> ₹44990 </span>
+                  <span style="font-weight: 800; font-size: 3.2vh"> ₹44990 </span>
                 </span>
                 <span style="font-size: 2vh; text-decoration: line-through">₹ 74990</span>
               </div>
