--- a/clixoDetail.html
+++ b/clixoDetail.html
@@ -77,6 +77,7 @@
           <a
             href="https://bitly.ws/YEBq"
             class="menuGray"
+            target="_blank"
             >Rate Us</a
           >
           <a
