--- a/clixoUser.html
+++ b/clixoUser.html
@@ -70,6 +70,10 @@
     }
   </style>
   <body>
+    <div style="text-align: center">
+      <p style="font-size: larger; font-weight: 600">Are you a Customer or Hero?</p>
+      <p>You can change the mode later</p>
+    </div>
     <div class="head">
       <img
         src="images/App Banners/clixoUser.png"
@@ -77,7 +81,7 @@
       />
     </div>
     <div class="user-1">
-      <p>
+      <p style="text-align: center">
         Choose Customer, If you are looking <br />
         for a photographer, videographer or Drone pilot
       </p>
