--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
       setTimeout(function () {
         window.location.href = "./clixoUser.html";
-      }, 2000);
+      }, 3500);
       // setTimeout(function () {
       //   document.body.style.backgroundColor = "#ffffff";
       // }, 500);
@@ -44,28 +44,24 @@
       width: 100vw;
       transition-duration: 1000ms;
       height: 100vh;
-      background-color: #ff3a00;
+      background-color: #ff0000;
       overflow: hidden;
       flex-direction: column;
       align-items: center;
     "
   >
-    <span style="font-size: 80px; font-weight: bolder; color: #fff; letter-spacing: -4px"
+    <!-- <span style="font-size: 80px; font-weight: bolder; color: #fff; letter-spacing: -4px"
       >clixo</span
     >
-    <span style="font-size: 50px; font-weight: 300; color: #fff; margin-top: -20px">App</span>
-    <!-- <video
-      width="320"
-      height="240"
+    <span style="font-size: 50px; font-weight: 300; color: #fff; margin-top: -20px">App</span> -->
+    <video
       autoplay
       muted
+      style="width: 75%"
     >
-      <source
-        src="images/App Preview HQ.mov"
-        type="video/mov"
-      />
+      <source src="images/App Preview HQ.mp4" />
 
       Your browser does not support the video tag.
-    </video> -->
+    </video>
   </body>
 </html>
