--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     />
     <title>Document</title>
     <script type="text/javascript">
-      setTimeout(function () {
-        window.location.href = "./clixoUser.html";
-      }, 3500);
+      // setTimeout(function () {
+      //   window.location.href = "./clixoUser.html";
+      // }, 3500);
       // setTimeout(function () {
       //   document.body.style.backgroundColor = "#ffffff";
       // }, 500);
@@ -35,6 +35,29 @@
       font-family: "TTCommonsBold", Verdana, sans-serif;
       margin: 0;
     }
+    .splash {
+      display: flex;
+      height: auto;
+      width: auto;
+      transition: transform 1.5s;
+      transform: scale(0.8);
+    }
+    .container {
+      position: relative;
+      width: 50%;
+    }
+
+    .image {
+      display: block;
+      width: 100%;
+      height: auto;
+      transition: transform 2s;
+      scale: 2.5;
+    }
+
+    .image {
+      transform: scale(0.3);
+    }
   </style>
   <body
     style="
@@ -44,22 +67,17 @@
       width: 100vw;
       transition-duration: 1000ms;
       height: 100vh;
-      background-color: #ff0000;
+      background-color: #ff3000;
       overflow: hidden;
       flex-direction: column;
       align-items: center;
     "
   >
-    <!-- <span style="font-size: 80px; font-weight: bolder; color: #fff; letter-spacing: -4px"
-      >clixo</span
-    >
-    <span style="font-size: 50px; font-weight: 300; color: #fff; margin-top: -20px">App</span> -->
-    <video
-      autoplay
-      muted
-      style="width: 75%"
-    >
-      <source src="images/App Preview HQ.mp4" />
-    </video>
+    <div class="container">
+      <img
+        class="image"
+        src="images/splash.png"
+      />
+    </div>
   </body>
 </html>
