--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     />
     <title>Document</title>
     <script type="text/javascript">
-      // setTimeout(function () {
-      //   window.location.href = "./clixoUser.html";
-      // }, 3500);
+      setTimeout(function () {
+        window.location.href = "./clixoUser.html";
+      }, 2000);
       // setTimeout(function () {
       //   document.body.style.backgroundColor = "#ffffff";
       // }, 500);
@@ -37,47 +37,43 @@
     }
     .splash {
       display: flex;
-      height: auto;
-      width: auto;
-      transition: transform 1.5s;
-      transform: scale(0.8);
-    }
-    .container {
-      position: relative;
-      width: 50%;
-    }
-
-    .image {
-      display: block;
+      height: 100%;
       width: 100%;
-      height: auto;
-      transition: transform 2s;
-      scale: 2.5;
+      animation: zoom-in 2s ease-in-out;
+      /* transform: scale(1); */
+      /* transform: translate(-50%, -50%); */
     }
-
-    .image {
-      transform: scale(0.3);
+    @keyframes zoom-in {
+      0% {
+        opacity: 100%;
+        scale: 1;
+      }
+      100% {
+        opacity: 0%;
+        scale: 0.2;
+      }
     }
   </style>
   <body
     style="
       display: flex;
+      overflow: hidden;
       align-items: center;
       justify-content: center;
-      width: 100vw;
+      max-width: 100vw;
       transition-duration: 1000ms;
-      height: 100vh;
+      max-height: 100vh;
       background-color: #ff3000;
       overflow: hidden;
       flex-direction: column;
       align-items: center;
     "
   >
-    <div class="container">
-      <img
-        class="image"
-        src="images/splash.png"
-      />
-    </div>
+    <!-- <div class="container"> -->
+    <img
+      class="splash"
+      src="images/splash.png"
+    />
+    <!-- </div> -->
   </body>
 </html>
